# rdp-bridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
dotnet/: RdpBridge.slnx
dotnet/RdpBridge/: IRdpFrameReceiver.cs  RdpBridge.csproj  RdpBridgeClient.cs  RdpConnectOptions.cs  RdpExperienceFlags.cs  RdpFramebufferEventArgs.cs  RdpState.cs
dotnet/RdpDemo/: App.axaml  App.axaml.cs  Program.cs  RdpDemo.csproj
dotnet/RdpDemo/ViewModels/: MainWindowViewModel.cs
dotnet/RdpDemo/Views/: MainWindow.axaml  MainWindow.axaml.cs  RdpView.axaml  RdpView.axaml.cs
dotnet/RdpSmokeTest/: Program.cs  RdpSmokeTest.csproj
examples/minimal/: CMakeLists.txt  main.c
include/: rdp_bridge.h
src/RdpBridge/: rdp_bridge.cpp
